ena-wms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ena-wms-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      ms: ena-wms
  template:
    metadata:
      labels:
        ms: ena-wms
    spec:
      containers:
      - image: openweb/git-sync
        name: ena-wms
        volumeMounts:
          - name: code
            mountPath: /git
      volumes:
        - name: code
          persistentVolumeClaim:
            claimName: ena-wms-pvc
