nextflow-reports-deployment+svc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nextflow-reports-deployment
spec:
  replicas:
  template:
    metadata:
      labels:
        ms: nextflow-reports
    spec:
      containers:
      - name: nextflow-reports
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: nextflow-reports
            mountPath: /usr/share/nginx/html
      volumes:
        - name: nextflow-reports
          persistentVolumeClaim:
            claimName: ont-data-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: nextflow-reports-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    ms: nextflow-reports
