nextflow-reports-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nextflow-reports-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /nextflow_reports(/|$)(.*)
        backend:
          serviceName: nextflow-reports-svc
          servicePort: 80
