notebooks-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: notebooks-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /notebooks(/|$)(.*)
        backend:
          serviceName: jovian-notebooks-svc
          servicePort: 80
