samples-logs-back-end-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: samples-logs-back-end-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - phylogeny.covid19dataportal.org
    secretName: tls-secret
  rules:
  - host: phylogeny.covid19dataportal.org
    http:
      paths:
      - path: /api(/|$)(.*)
        backend:
          serviceName: samples-logs-back-end-svc
          servicePort: 80
