samples-logs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: samples-logs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /api
        backend:
          serviceName: samples-logs-back-end-svc
          servicePort: 80
      - path: /
        backend:
          serviceName: samples-logs-front-end-svc
          servicePort: 80
